--- a/src/app/modules/payment-management/payment/components/ticket-payment-modal/ticket-payment-modal.component.scss
+++ b/src/app/modules/payment-management/payment/components/ticket-payment-modal/ticket-payment-modal.component.scss
@@ -16,5 +16,11 @@
   background-color: rgba(2, 117, 216, 0.5);
 }
 .example-form-field {
-  width: 150px;
+  width: 215px;
+  margin-right: 10px;
+}
+
+.palabra-form-field {
+  width: 215px;
+  margin-right: 10px;
 }
