--- a/src/app/modules/user-management/users/components/edit-user-modal/edit-user-modal.component.html
+++ b/src/app/modules/user-management/users/components/edit-user-modal/edit-user-modal.component.html
@@ -27,7 +27,7 @@
                         </div>
                         <div
                             class="invalid-feedback"
-                            *ngIf="controlHasError('required', 'firstName')"
+                            *ngIf="controlHasError('required', 'firstName') && isControlTouched('firstName')"
                         >
                             Primer nombre es requerido
                         </div>
