--- a/src/app/modules/payment-management/payment/payment-edit/payment-edit.component.html
+++ b/src/app/modules/payment-management/payment/payment-edit/payment-edit.component.html
@@ -1,15 +1,12 @@
 <div class="card card-custom gutter-b">
     <div class="card-header">
       <div class="card-title">
-        <h3 class="card-label">Cobro list</h3>
+        <h3 class="card-label">Lista de cobros</h3>
       </div>
       <div class="card-toolbar">
         <a type="button" class="btn btn-light" routerLink="/payment-management/payment">
-          <i class="fa fa-arrow-left"></i>Back
+          <i class="fa fa-arrow-left"></i>Volver
         </a>
-        <button class="btn btn-secondary ml-2" >
-          <i class="fa fa-redo"></i>Reset
-        </button>
       </div>
     </div>
     <div class="card-body">
@@ -178,12 +175,12 @@
                   <span></span>
                 </label>
               </td>
-              <td>{{ product.VINCode }}</td>
-              <td>{{ product.manufacture }}</td>
-              <td>{{ product.model }}</td>
-              <td>{{ product.modelYear }}</td>
+              <td>{{ product.username }}</td>
+              <td>{{ product.fullname }}</td>
+              <td>{{ product.username }}</td>
+              <td>{{ product.email }}</td>
               <td>
-                <span [style.color]="product.color">{{ product.color }}</span>
+                <span [style.color]="product.color">{{ product.phone }}</span>
               </td>
               <td>
                 <a
