--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -104,6 +104,23 @@
                         <span class="menu-text">Agente de Cobros</span>
                     </a>
                     </li>
+                    <li
+                    class="menu-item"
+                    aria-haspopup="true"
+                    data-menu-toggle="hover"
+                    routerLinkActive="menu-item-active"
+                    >
+                    <a
+                        class="menu-link"
+                        routerLink="/asign-internal-user"
+                        routerLinkActive="active"
+                    >
+                        <i class="menu-bullet menu-bullet-dot">
+                        <span></span>
+                        </i>
+                        <span class="menu-text">Asignación de Usuarios Internos</span>
+                    </a>
+                    </li>
                 </ul>
                 </div>
             </li>
